Bug 305077 - Ampersand (&) charactor not always displayed in connection list
Summary: Ampersand (&) charactor not always displayed in connection list
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: 0.9
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-13 12:15 UTC by Eckhart Wörner
Modified: 2012-08-13 21:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eckhart Wörner 2012-08-13 12:15:40 UTC
The connection list on the right side of the plasmoid does not always show ampersand (&) signs.

Reproducible: Always

Steps to Reproduce:
1. Create a connection called "1&1".
Actual Results:  
Connection appears as "11" in the connections list on the right side (and as "1&1" on the left side when it is activated).

Expected Results:  
The connection should always display as "1&1".
Comment 1 Lamarque V. Souza 2012-08-13 21:43:56 UTC
Git commit a21841f5e63ec49ec3d2ce95c6a4b02a85661bfb by Lamarque V. Souza.
Committed on 13/08/2012 at 23:40.
Pushed by lvsouza into branch 'master'.

Escape ampersands since Plasma::IconWidget::setText() removes
accelerators (ampersands) automatically.
FIXED-IN: 0.9.0.5

M  +2    -2    applet/activatableitem.cpp
M  +4    -4    applet/gsminterfaceconnectionitem.cpp
M  +2    -2    applet/interfaceconnectionitem.cpp
M  +3    -2    applet/wirelessnetworkitem.cpp
M  +6    -1    libs/client/remoteinterfaceconnection.cpp
M  +1    -1    libs/client/remoteinterfaceconnection.h

http://commits.kde.org/networkmanagement/a21841f5e63ec49ec3d2ce95c6a4b02a85661bfb
Comment 2 Lamarque V. Souza 2012-08-13 21:48:02 UTC
Git commit 7e5773828fb1fcecd75bb1e125249378e348529e by Lamarque V. Souza.
Committed on 13/08/2012 at 23:40.
Pushed by lvsouza into branch 'nm09'.

Escape ampersands since Plasma::IconWidget::setText() removes
accelerators (ampersands) automatically.
FIXED-IN: 0.9.0.5
(cherry picked from commit a21841f5e63ec49ec3d2ce95c6a4b02a85661bfb)

Conflicts:

	applet/activatableitem.cpp
	applet/gsminterfaceconnectionitem.cpp
	applet/interfaceconnectionitem.cpp

M  +3    -2    applet/activatableitem.cpp
M  +4    -4    applet/gsminterfaceconnectionitem.cpp
M  +2    -1    applet/interfaceconnectionitem.cpp
M  +3    -2    applet/wirelessnetworkitem.cpp
M  +6    -1    libs/client/remoteinterfaceconnection.cpp
M  +1    -1    libs/client/remoteinterfaceconnection.h
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/7e5773828fb1fcecd75bb1e125249378e348529e