Escape ampersands since Plasma::IconWidget::setText() removes accelerators (ampersands) automatically.

BUG: 305077
FIXED-IN: 0.9.0.5
(cherry picked from commit a21841f5e63ec49ec3d2ce95c6a4b02a85661bfb)

Conflicts:

	applet/activatableitem.cpp
	applet/gsminterfaceconnectionitem.cpp
	applet/interfaceconnectionitem.cpp